--- a/.luarc.json
+++ b/.luarc.json
@@ -1,7 +1,8 @@
 {
     "$schema": "https://raw.githubusercontent.com/LuaLS/vscode-lua/master/setting/schema.json",
     "diagnostics.globals": [
-        "ModRef"
+        "ModRef",
+        "LOGGING"
     ],
     "workspace.library": [
         "../shared"
